--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase-app": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-likert-scale": "^4.1.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
